etc/tests/fuzz/errors/ownership/return-owned-without-contract.nshape
shape ownership-return-owned-without-contract {
  family "compiler-errors/ownership"
  generator "error"
  features ["error", "ownership", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "returning owned slot 'a' requires @returns_owned"
  flags "--ownership-strict"
  source ny <<'NY'
use std.core

fn bad() {
   def a = [1]
   return a
}

bad()
NY
}
